lyzr-boilerplate/src/app/globals.css
@import url("https://api.fontshare.com/v2/css?f[]=switzer@1,2&display=swap");
@import "tailwindcss";
@import "tw-animate-css";

@source "../node_modules/streamdown/dist/*.js";

@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(0.9901 0.0034 247.8573);
  --foreground: oklch(0.2077 0.0398 265.7549);
  --card: oklch(1.0000 0 0);
  --card-foreground: oklch(0.2077 0.0398 265.7549);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.2077 0.0398 265.7549);
  --primary: oklch(0.5308 0.2636 281.3504);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.9683 0.0069 247.8956);
  --secondary-foreground: oklch(0.2077 0.0398 265.7549);
  /* --muted: oklch(0.9842 0.0034 247.8575); */
  --muted: oklch(0.9458 0.023 288.66);
  /* --muted: oklch(0.8208 0.101 19.45); */
  --muted-foreground: oklch(0.5544 0.0407 257.4166);
  --accent: oklch(0.9683 0.0069 247.8956);
  --accent-foreground: oklch(0.2077 0.0398 265.7549);
  --destructive: oklch(0.6368 0.2078 25.3313);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.9288 0.0126 255.5078);
  --input: oklch(0.9288 0.0126 255.5078);
  --ring: oklch(0.5325 0.2397 288.1280);
  --chart-1: oklch(0.5308 0.2636 281.3504);
  --chart-2: oklch(0.5695 0.1561 330.8732);
  --chart-3: oklch(0.4923 0.1374 336.1814);
  --chart-4: oklch(0.7686 0.1647 70.0804);
  --chart-5: oklch(0.6368 0.2078 25.3313);
  --sidebar: oklch(0.9842 0.0034 247.8575);
  --sidebar-foreground: oklch(0.2077 0.0398 265.7549);
  --sidebar-primary: oklch(0.5308 0.2636 281.3504);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.9683 0.0069 247.8956);
  --sidebar-accent-foreground: oklch(0.2077 0.0398 265.7549);
  --sidebar-border: oklch(0.9288 0.0126 255.5078);
  --sidebar-ring: oklch(0.5325 0.2397 288.1280);
  --font-sans: "Switzer", ui-sans-serif, sans-serif, system-ui;
  --font-serif: "Switzer", ui-serif, serif, system-ui;
  --font-mono: monospace;
  --radius: 1.0rem;
  --shadow-2xs: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.05);
  --shadow-xs: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.05);
  --shadow-sm: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.10), 0px 1px 2px -1px hsl(279.1837 47.5728% 79.8039% / 0.10);
  --shadow: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.10), 0px 1px 2px -1px hsl(279.1837 47.5728% 79.8039% / 0.10);
  --shadow-md: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.10), 0px 2px 4px -1px hsl(279.1837 47.5728% 79.8039% / 0.10);
  --shadow-lg: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.10), 0px 4px 6px -1px hsl(279.1837 47.5728% 79.8039% / 0.10);
  --shadow-xl: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.10), 0px 8px 10px -1px hsl(279.1837 47.5728% 79.8039% / 0.10);
  --shadow-2xl: 0px 4px 2px 0px hsl(279.1837 47.5728% 79.8039% / 0.25);
  --tracking-normal: normal;
  --spacing: 0.25rem;
  /* --primary-gradient-start: #833ab4;
  --primary-gradient-middle: #fd1d1d;
  --primary-gradient-end: #fcb045; */
  /* padding: 0.5rem; */
}

.dark {
  --background: oklch(0.1748 0.0713 266.7409);
  --foreground: oklch(0.9842 0.0034 247.8575);
  --card: oklch(0.2077 0.0398 265.7549);
  --card-foreground: oklch(0.9842 0.0034 247.8575);
  --popover: oklch(0.2077 0.0398 265.7549);
  --popover-foreground: oklch(0.9842 0.0034 247.8575);
  --primary: oklch(0.5976 0.2311 286.3572);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.2795 0.0368 260.0310);
  --secondary-foreground: oklch(0.9842 0.0034 247.8575);
  --muted: oklch(0.2795 0.0368 260.0310);
  --muted-foreground: oklch(0.7107 0.0351 256.7878);
  --accent: oklch(0.2795 0.0368 260.0310);
  --accent-foreground: oklch(0.9842 0.0034 247.8575);
  --destructive: oklch(0.3958 0.1331 25.7230);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.2795 0.0368 260.0310);
  --input: oklch(0.2795 0.0368 260.0310);
  --ring: oklch(0.5325 0.2397 288.1280);
  --chart-1: oklch(0.5976 0.2311 286.3572);
  --chart-2: oklch(0.6541 0.1593 325.1735);
  --chart-3: oklch(0.5820 0.1263 336.9481);
  --chart-4: oklch(0.8369 0.1644 84.4286);
  --chart-5: oklch(0.5054 0.1905 27.5181);
  --sidebar: oklch(0.2077 0.0398 265.7549);
  --sidebar-foreground: oklch(0.9842 0.0034 247.8575);
  --sidebar-primary: oklch(0.5976 0.2311 286.3572);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.2795 0.0368 260.0310);
  --sidebar-accent-foreground: oklch(0.9842 0.0034 247.8575);
  --sidebar-border: oklch(0.2795 0.0368 260.0310);
  --sidebar-ring: oklch(0.5325 0.2397 288.1280);
  --font-sans: "Switzer", ui-sans-serif, sans-serif, system-ui;
  --font-serif: "Switzer", ui-serif, serif, system-ui;
  --font-mono: monospace;
  --radius: 1.0rem;
  --shadow-2xs: 0px 4px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0px 4px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0px 4px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow: 0px 4px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow-md: 0px 4px 2px 0px hsl(0 0% 0% / 0.10), 0px 2px 4px -1px hsl(0 0% 0% / 0.10);
  --shadow-lg: 0px 4px 2px 0px hsl(0 0% 0% / 0.10), 0px 4px 6px -1px hsl(0 0% 0% / 0.10);
  --shadow-xl: 0px 4px 2px 0px hsl(0 0% 0% / 0.10), 0px 8px 10px -1px hsl(0 0% 0% / 0.10);
  --shadow-2xl: 0px 4px 2px 0px hsl(0 0% 0% / 0.25);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

html {
  zoom: 0.9;
}

body {
  letter-spacing: var(--tracking-normal);
}


@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

::selection {
  @apply bg-primary text-primary-foreground;
}

